# Avito_task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  handlers.py  handlers_request_db.py  path.txt  pyproject.toml  request_currency.py  requests_db.py  setup.cfg  test_db.py  test_handlers.py  yoyo.ini
.github/workflows/: actions.yml
app/: handlers.py  main_logic.py  request_currency.py  requests_db.py
migrations/: 001.create_users_balance.py  001.init.py  002.create_transaction_history.py  20220221_01_XHMU2-add-tables.py
tests/: decorator.py  decorator_test.py  test_api.py  test_db.py  test_handlers.py
