[tool.poetry]
name = "avito_task"
version = "0.1.0"
description = "API servic"
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
