[tool.poetry]
name = "avito_task"
version = "0.1.0"
description = "API servic"
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]
packages = [ {include = "app"}, ]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
fastapi = "^0.74.0"
httptools = "^0.3.0"
uvicorn = "^0.17.5"
PyMySQL = "^1.0.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
